--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="./assets/svg/empty-cart-icon.svg">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;400;500&display=swap"
     rel="stylesheet">
-  <title>Online-store test</title>
+  <title>Online-store</title>
 </head>
 <body class="body">
   <div class="body__wrapper">
