--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
 
       <div class="filter">
         <div class="filter__type">
-          <h3 class="filter__title">Category</h3>
+          <h2 class="filter__title">Category</h2>
           <ul id='check-type' class="filter__list">
             <li class="check">
               <label class="check__label">Succulent
@@ -177,12 +177,14 @@
           <h3 class="filter__title">Price</h3>
           <div class="range">
             <div class="range__value">
-              <span>min</span>
-              <input type="number" class="input-min" value="1" max="100">
+              <label for="price-min">min</label>
+              <input type="number" id="price-min" class="input-min" value="1" max="100" aria-label="Minimum price">
               <span>$</span>
+
               <div class="range__separator">-</div>
-              <span>max</span>
-              <input type="number" class="input-max" value="100" max="100">
+
+              <label for="price-max">max</label>
+              <input type="number" id="price-max" class="input-max" value="100" max="100" aria-label="Maximum price">
               <span>$</span>
             </div>
             <div class="range__slider slider">
@@ -217,8 +219,8 @@
               <div class="slider__progress"></div>
             </div>
             <div class="range__range-input">
-              <input type="range" class="range-min" min="1" max="69" value="1" step="1">
-              <input type="range" class="range-max" min="1" max="65" value="65" step="1">
+              <input type="range" class="range-min" min="1" max="69" value="1" step="1" aria-label="Minimum price">
+              <input type="range" class="range-max" min="1" max="65" value="65" step="1" aria-label="Maximum price">
             </div>
           </div>
         </div>
