fix: add label, change size

--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,9 @@
               <div class="slider__progress"></div>
             </div>
             <div class="range__range-input">
+              <label for="range-min" class="sr-only">Minimum price</label>
               <input type="range" class="range-min" min="1" max="69" value="1" step="1" aria-label="Minimum price">
+              <label for="range-max" class="sr-only">Maximum price</label>
               <input type="range" class="range-max" min="1" max="65" value="65" step="1" aria-label="Maximum price">
             </div>
           </div>
